# jpl-moshier-ephemeris-python

./: .gitignore  CONTRIBUTING.md  README.md  UPSTREAM_SYNC.md  VERSION.md  pyproject.toml
.github/workflows/: benchmarks.yml  publish.yml  tests.yml
docs/benchmark/: benchmark.html  benchmark_runtime.py  macos-latest-pysweph.json  macos-latest-pyswisseph.json  macos-latest-swisseph-ffi.json  report_generator.py  ubuntu-latest-pysweph.json  ubuntu-latest-pyswisseph.json  ubuntu-latest-swisseph-ffi.json  windows-latest-pysweph.json  windows-latest-pyswisseph.json  windows-latest-swisseph-ffi.json
scripts/: fetch_prebuilt.py  generate_bindings.php
src/jpl_moshier_ephemeris/: __init__.py  _loader.py  bindings.py  constants.py
src/jpl_moshier_ephemeris/libs/macos-arm64/: libcalceph.dylib
src/jpl_moshier_ephemeris/libs/macos-x64/: libcalceph.dylib
src/swisseph_ffi/: __init__.py  _loader.py  bindings.py  constants.py
src/swisseph_ffi/libs/macos-arm64/: libswe.dylib
src/swisseph_ffi/libs/macos-x64/: libswe.dylib
tests/: test_function_coverage.py  test_jpl_moshier_ephemeris.py  test_swiss_eph_ffi.py  test_verification.py
