[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "jpl-moshier-ephemeris-python"
version = "1.0.0"
description = "Pure Python ctypes FFI wrapper for the JPL Moshier Ephemeris native library with direct jme_* API access and bundled jme plus calceph runtimes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jayesh Mepani", email = "jayeshmepani777@gmail.com" }
]
keywords = [
    "astrology",
    "astronomy",
    "ephemeris",
    "ffi",
    "ctypes",
    "python-ffi",
    "jpl",
    "moshier",
    "calceph",
    "vedic-astrology",
    "jyotish",
    "horoscope",
    "kundli",
    "birth-chart",
    "planetary-positions",
    "ayanamsa",
    "sidereal",
    "tropical",
    "houses",
    "eclipse",
    "zero-abstraction",
    "zero-setup",
    "cross-platform",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jayeshmepani/jpl-moshier-ephemeris-python"
Source = "https://github.com/jayeshmepani/jpl-moshier-ephemeris-python"
Issues = "https://github.com/jayeshmepani/jpl-moshier-ephemeris-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jpl_moshier_ephemeris"]

[tool.hatch.build.targets.sdist]
include = [
    "src/jpl_moshier_ephemeris",
    "tests",
    "scripts",
    "README.md",
    "VERSION.md",
    "UPSTREAM_SYNC.md",
    "CONTRIBUTING.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src/jpl_moshier_ephemeris", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "RUF",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/jpl_moshier_ephemeris/__init__.py" = ["F401", "F403"]
"src/jpl_moshier_ephemeris/bindings.py" = ["E501", "RUF022"]
"src/jpl_moshier_ephemeris/constants.py" = ["E501", "N816"]
"tests/*" = ["S101"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
include = ["src/jpl_moshier_ephemeris", "tests", "scripts"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
